k8s/simulator/00-ms-simulator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "simulator"
  labels:
    name: "simulator"
