k8s/simulator/02-ms-simulator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-simulator
  namespace: simulator
spec:
  selector:
    app: ms-simulator
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: LoadBalancer
