k8s/simulator/03-ms-simulator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulator-ingress
  namespace: simulator
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: sim.udite.com
      http:
        paths:
          - backend:
              service:
                name: ms-simulator
                port:
                  number: 5000
            path: /
            pathType: Prefix
